--- a/debian/control
+++ b/debian/control
@@ -1,14 +1,14 @@
 Source: github-sync
 Section: net
 Priority: optional
-Maintainer: Chris Lamb <chris@chris-lamb.co.uk>
+Maintainer: Chris Lamb <lamby@debian.org>
 Build-Depends:
  debhelper (>= 9),
  dh-systemd,
  dh-virtualenv (>= 0.10),
  python,
  python-dev
-Standards-Version: 3.9.6
+Standards-Version: 3.9.8
 
 Package: github-sync
 Architecture: any
