Create a directory under /var/lib

--- a/github-sync.cfg
+++ b/github-sync.cfg
@@ -1,5 +1,5 @@
 [General]
-CacheDir = /var/cache/github-sync
+CacheDir = /var/lib/github-sync
 ListenAddress = 127.0.0.1
 ListenPort = 2727
 GithubToken = FIXME
